# malloc-contest

./: .gitignore  CMakeLists.txt  README.md
include/: malloc.h
